[project]
name = "ai-common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bertan Günyel", email = "bertan.gunyel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.8",
    "pillow>=11.2.1",
    "tavily-python>=0.7.0",
    "tqdm>=4.67.1",
]

[project.scripts]
ai-common = "ai_common:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
