[project]
name = "ai-common"
version = "0.1.0"
description = "Common classes and functions for AI code"
readme = "README.md"
authors = [
    { name = "Bertan Günyel", email = "bertan.gunyel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.13",
    "langchain-core>=0.3.56",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.15",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "pillow>=11.2.1",
    "tavily-python>=0.7.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest<9,>=8"]
lint = ["ruff<1.0,>=0.5"]
