[project]
name = "ai-common"
version = "0.1.0"
description = "Common classes and functions for AI code"
readme = "README.md"
authors = [
    { name = "Bertan Günyel", email = "bertan.gunyel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "ollama>=0.6.0",
    "openai>=2.6.0",
    "pillow>=11.3.0",
    "tavily-python>=0.7.12",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest<9,>=8"]
lint = ["ruff<1.0,>=0.5"]
